@@ -1,198 +1,186 @@
 package it.eng.negotiation.policy.service;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import it.eng.negotiation.model.*;
+import it.eng.negotiation.policy.evaluator.*;
+import it.eng.negotiation.policy.model.PolicyConstants;
+import it.eng.negotiation.policy.model.PolicyDecision;
+import it.eng.negotiation.policy.model.PolicyRequest;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalDateTime;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.junit.jupiter.MockitoExtension;
-
-import it.eng.negotiation.model.Action;
-import it.eng.negotiation.model.Agreement;
-import it.eng.negotiation.model.Constraint;
-import it.eng.negotiation.model.LeftOperand;
-import it.eng.negotiation.model.NegotiationMockObjectUtil;
-import it.eng.negotiation.model.Operator;
-import it.eng.negotiation.model.Permission;
-import it.eng.negotiation.policy.evaluator.AccessCountPolicyEvaluator;
-import it.eng.negotiation.policy.evaluator.PolicyEvaluator;
-import it.eng.negotiation.policy.evaluator.PurposePolicyEvaluator;
-import it.eng.negotiation.policy.evaluator.SpatialPolicyEvaluator;
-import it.eng.negotiation.policy.evaluator.TemporalPolicyEvaluator;
-import it.eng.negotiation.policy.model.PolicyConstants;
-import it.eng.negotiation.policy.model.PolicyDecision;
-import it.eng.negotiation.policy.model.PolicyRequest;
+import static org.junit.jupiter.api.Assertions.*;
 
 @ExtendWith(MockitoExtension.class)
 class PolicyDecisionPointTest {
 
-	private PolicyDecisionPoint policyDecisionPoint;
-	
-	@BeforeEach
-	public void setup() {
-		// Not using mocks for the evaluators to test the real implementations
-		List<PolicyEvaluator> evaluators = List.of(new AccessCountPolicyEvaluator(), 
-				new PurposePolicyEvaluator(), 
-				new SpatialPolicyEvaluator(), 
-				new TemporalPolicyEvaluator());
-		policyDecisionPoint = new PolicyDecisionPoint(evaluators);
-	}
-	
-	@Test
-	public void evaluateNoAgreementId() {
-		PolicyRequest request = PolicyRequest.Builder.newInstance()
-				.resourceId("resourceId")
-				.userId("userId")
-				.action(Action.READ)
-				.build();
+    @Mock
+    private PolicyDecisionPoint policyDecisionPoint;
 
-		PolicyDecision policyDecision = policyDecisionPoint.evaluate(request, null);
-		
-		assertNotNull(policyDecision);
-		assertFalse(policyDecision.isAllowed());
-		assertEquals("Agreement ID is missing", policyDecision.getMessage());
-	}
-	
-	@Test
-	void evaluateSuccess_count() {
-		PolicyRequest request = PolicyRequest.Builder.newInstance()
-				.agreementId("agreementId")
-				.resourceId("resourceId")
-				.userId("userId")
-				.action(Action.READ)
-				.attribute(PolicyConstants.CURRENT_COUNT, 3)
-				.build();
-		
-		PolicyDecision policyDecision = policyDecisionPoint.evaluate(request, NegotiationMockObjectUtil.AGREEMENT);
-		
-		assertNotNull(policyDecision);
-		assertTrue(policyDecision.isAllowed());
-	}
-	
-	@Test
-	void evaluateSuccess_count_denied() {
-		PolicyRequest request = PolicyRequest.Builder.newInstance()
-				.agreementId("agreementId")
-				.resourceId("resourceId")
-				.userId("userId")
-				.action(Action.READ)
-				.attribute(PolicyConstants.CURRENT_COUNT, 6)
-				.build();
-		
-		PolicyDecision policyDecision = policyDecisionPoint.evaluate(request, NegotiationMockObjectUtil.AGREEMENT);
-		
-		assertNotNull(policyDecision);
-		assertFalse(policyDecision.isAllowed());
-		assertEquals("Access count exceeded", policyDecision.getMessage());
-	}
-	
-	@Test
-	public void evaluateSuccess_dateTime() {
-		Agreement agreement = Agreement.Builder.newInstance()
-				.id(NegotiationMockObjectUtil.generateUUID())
-				.assignee(NegotiationMockObjectUtil.ASSIGNEE)
-				.assigner(NegotiationMockObjectUtil.ASSIGNER)
-				.target(NegotiationMockObjectUtil.TARGET)
-				.timestamp(ZonedDateTime.now().minusDays(2).format(DateTimeFormatter.ISO_OFFSET_DATE_TIME))
-				.permission(Arrays.asList(NegotiationMockObjectUtil.PERMISSION))
-				.build();
+    @BeforeEach
+    public void setup() {
+        // Not using mocks for the evaluators to test the real implementations
+        List<PolicyEvaluator> evaluators = List.of(new AccessCountPolicyEvaluator(),
+                new PurposePolicyEvaluator(),
+                new SpatialPolicyEvaluator(),
+                new TemporalPolicyEvaluator());
+        policyDecisionPoint = new PolicyDecisionPoint(evaluators);
+    }
 
-		PolicyRequest request = PolicyRequest.Builder.newInstance()
-				.agreementId(agreement.getId())
-				.resourceId(agreement.getTarget())
-				.userId("userId")
-				.action(Action.READ)
-				// accessTime is now
-				.build();
+    @Test
+    public void evaluateNoAgreementId() {
+        PolicyRequest request = PolicyRequest.Builder.newInstance()
+                .resourceId("resourceId")
+                .userId("userId")
+                .action(Action.READ)
+                .build();
 
-		PolicyDecision policyDecision = policyDecisionPoint.evaluate(request, agreement);
+        PolicyDecision policyDecision = policyDecisionPoint.evaluate(request, null);
 
-		assertNotNull(policyDecision);
-		assertTrue(policyDecision.isAllowed());
-	}
-	
-	@Test
-	public void evaluateSuccess_dateTime_denied() {
-		Constraint constraint = Constraint.Builder.newInstance()
-				.leftOperand(LeftOperand.DATE_TIME)
-				.operator(Operator.GT)
-				.rightOperand(LocalDateTime.now().plusDays(1).format(DateTimeFormatter.ISO_DATE_TIME))
-				.build();
-		
-		Permission permission = Permission.Builder.newInstance()
-				.action(Action.USE)
-				.target(NegotiationMockObjectUtil.TARGET)
-				.constraint(Arrays.asList(constraint))
-				.build();
-		
-		Agreement agreement = Agreement.Builder.newInstance()
-				.id(NegotiationMockObjectUtil.generateUUID())
-				.assignee(NegotiationMockObjectUtil.ASSIGNEE)
-				.assigner(NegotiationMockObjectUtil.ASSIGNER)
-				.target(NegotiationMockObjectUtil.TARGET)
-				.timestamp(ZonedDateTime.now().minusDays(2).format(DateTimeFormatter.ISO_OFFSET_DATE_TIME))
-				.permission(Arrays.asList(permission))
-				.build();
+        assertNotNull(policyDecision);
+        assertFalse(policyDecision.isAllowed());
+        assertEquals("Agreement ID is missing", policyDecision.getMessage());
+    }
 
-		PolicyRequest request = PolicyRequest.Builder.newInstance()
-				.agreementId(agreement.getId())
-				.resourceId(agreement.getTarget())
-				.userId("userId")
-				.action(Action.READ)
-				.build();
+    @Test
+    void evaluateSuccess_count() {
+        PolicyRequest request = PolicyRequest.Builder.newInstance()
+                .agreementId("agreementId")
+                .resourceId("resourceId")
+                .userId("userId")
+                .action(Action.READ)
+                .attribute(PolicyConstants.CURRENT_COUNT, 3)
+                .build();
 
-		PolicyDecision policyDecision = policyDecisionPoint.evaluate(request, agreement);
+        PolicyDecision policyDecision = policyDecisionPoint.evaluate(request, NegotiationMockObjectUtil.AGREEMENT);
 
-		assertNotNull(policyDecision);
-		assertFalse(policyDecision.isAllowed());
-	}
-	
-	@Test
-	public void evaluatePurpose_success() {
-		Constraint constraint = Constraint.Builder.newInstance()
-				.leftOperand(LeftOperand.PURPOSE)
-				.operator(Operator.EQ)
-				.rightOperand("dsp_test")
-				.build();
+        assertNotNull(policyDecision);
+        assertTrue(policyDecision.isAllowed());
+    }
 
-		Permission permission = Permission.Builder.newInstance()
-				.action(Action.USE)
-				.target(NegotiationMockObjectUtil.TARGET)
-				.constraint(Arrays.asList(constraint))
-				.build();
+    @Test
+    void evaluateSuccess_count_denied() {
+        PolicyRequest request = PolicyRequest.Builder.newInstance()
+                .agreementId("agreementId")
+                .resourceId("resourceId")
+                .userId("userId")
+                .action(Action.READ)
+                .attribute(PolicyConstants.CURRENT_COUNT, 6)
+                .build();
 
-		Agreement agreement = Agreement.Builder.newInstance()
-				.id(NegotiationMockObjectUtil.generateUUID())
-				.assignee(NegotiationMockObjectUtil.ASSIGNEE)
-				.assigner(NegotiationMockObjectUtil.ASSIGNER)
-				.target(NegotiationMockObjectUtil.TARGET)
-				.timestamp(ZonedDateTime.now().minusDays(2).format(DateTimeFormatter.ISO_OFFSET_DATE_TIME))
-				.permission(Arrays.asList(permission)).build();
+        PolicyDecision policyDecision = policyDecisionPoint.evaluate(request, NegotiationMockObjectUtil.AGREEMENT);
 
-		PolicyRequest request = PolicyRequest.Builder.newInstance()
-				.agreementId(agreement.getId())
-				.resourceId(agreement.getTarget())
-				.userId("userId").action(Action.READ)
-				.attribute(PolicyConstants.PURPOSE, "dsp_test")
-				.build();
+        assertNotNull(policyDecision);
+        assertFalse(policyDecision.isAllowed());
+        assertEquals("Access count exceeded", policyDecision.getMessage());
+    }
 
-		PolicyDecision policyDecision = policyDecisionPoint.evaluate(request, agreement);
+    @Test
+    public void evaluateSuccess_dateTime() {
+        Agreement agreement = Agreement.Builder.newInstance()
+                .id(NegotiationMockObjectUtil.generateUUID())
+                .assignee(NegotiationMockObjectUtil.ASSIGNEE)
+                .assigner(NegotiationMockObjectUtil.ASSIGNER)
+                .target(NegotiationMockObjectUtil.TARGET)
+                .timestamp(ZonedDateTime.now().minusDays(2).format(DateTimeFormatter.ISO_OFFSET_DATE_TIME))
+                .permission(Collections.singletonList(NegotiationMockObjectUtil.PERMISSION))
+                .build();
 
-		assertNotNull(policyDecision);
-		assertTrue(policyDecision.isAllowed());
-	}
-	
-	@Test
-	public void evaluatePurpose_deny() {
+        PolicyRequest request = PolicyRequest.Builder.newInstance()
+                .agreementId(agreement.getId())
+                .resourceId(agreement.getTarget())
+                .userId("userId")
+                .action(Action.READ)
+                // accessTime is now
+                .build();
+
+        PolicyDecision policyDecision = policyDecisionPoint.evaluate(request, agreement);
+
+        assertNotNull(policyDecision);
+        assertTrue(policyDecision.isAllowed());
+    }
+
+    @Test
+    public void evaluateSuccess_dateTime_denied() {
+        Constraint constraint = Constraint.Builder.newInstance()
+                .leftOperand(LeftOperand.DATE_TIME)
+                .operator(Operator.GT)
+                .rightOperand(LocalDateTime.now().plusDays(1).format(DateTimeFormatter.ISO_DATE_TIME))
+                .build();
+
+        Permission permission = Permission.Builder.newInstance()
+                .action(Action.USE)
+                .target(NegotiationMockObjectUtil.TARGET)
+                .constraint(Collections.singletonList(constraint))
+                .build();
+
+        Agreement agreement = Agreement.Builder.newInstance()
+                .id(NegotiationMockObjectUtil.generateUUID())
+                .assignee(NegotiationMockObjectUtil.ASSIGNEE)
+                .assigner(NegotiationMockObjectUtil.ASSIGNER)
+                .target(NegotiationMockObjectUtil.TARGET)
+                .timestamp(ZonedDateTime.now().minusDays(2).format(DateTimeFormatter.ISO_OFFSET_DATE_TIME))
+                .permission(Collections.singletonList(permission))
+                .build();
+
+        PolicyRequest request = PolicyRequest.Builder.newInstance()
+                .agreementId(agreement.getId())
+                .resourceId(agreement.getTarget())
+                .userId("userId")
+                .action(Action.READ)
+                .build();
+
+        PolicyDecision policyDecision = policyDecisionPoint.evaluate(request, agreement);
+
+        assertNotNull(policyDecision);
+        assertFalse(policyDecision.isAllowed());
+    }
+
+    @Test
+    public void evaluatePurpose_success() {
+        Constraint constraint = Constraint.Builder.newInstance()
+                .leftOperand(LeftOperand.PURPOSE)
+                .operator(Operator.EQ)
+                .rightOperand("dsp_test")
+                .build();
+
+        Permission permission = Permission.Builder.newInstance()
+                .action(Action.USE)
+                .target(NegotiationMockObjectUtil.TARGET)
+                .constraint(Collections.singletonList(constraint))
+                .build();
+
+        Agreement agreement = Agreement.Builder.newInstance()
+                .id(NegotiationMockObjectUtil.generateUUID())
+                .assignee(NegotiationMockObjectUtil.ASSIGNEE)
+                .assigner(NegotiationMockObjectUtil.ASSIGNER)
+                .target(NegotiationMockObjectUtil.TARGET)
+                .timestamp(ZonedDateTime.now().minusDays(2).format(DateTimeFormatter.ISO_OFFSET_DATE_TIME))
+                .permission(Collections.singletonList(permission)).build();
+
+        PolicyRequest request = PolicyRequest.Builder.newInstance()
+                .agreementId(agreement.getId())
+                .resourceId(agreement.getTarget())
+                .userId("userId").action(Action.READ)
+                .attribute(PolicyConstants.PURPOSE, "dsp_test")
+                .build();
+
+        PolicyDecision policyDecision = policyDecisionPoint.evaluate(request, agreement);
+
+        assertNotNull(policyDecision);
+        assertTrue(policyDecision.isAllowed());
+    }
+
+    @Test
+    public void evaluatePurpose_deny() {
         Constraint constraint = Constraint.Builder.newInstance()
                 .leftOperand(LeftOperand.PURPOSE)
                 .operator(Operator.EQ)
@@ -202,7 +190,7 @@ class PolicyDecisionPointTest {
         Permission permission = Permission.Builder.newInstance()
                 .action(Action.USE)
                 .target(NegotiationMockObjectUtil.TARGET)
-                .constraint(Arrays.asList(constraint))
+                .constraint(Collections.singletonList(constraint))
                 .build();
 
         Agreement agreement = Agreement.Builder.newInstance()
@@ -211,7 +199,7 @@ class PolicyDecisionPointTest {
                 .assigner(NegotiationMockObjectUtil.ASSIGNER)
                 .target(NegotiationMockObjectUtil.TARGET)
                 .timestamp(ZonedDateTime.now().minusDays(2).format(DateTimeFormatter.ISO_OFFSET_DATE_TIME))
-                .permission(Arrays.asList(permission)).build();
+                .permission(Collections.singletonList(permission)).build();
 
         PolicyRequest request = PolicyRequest.Builder.newInstance()
                 .agreementId(agreement.getId())
@@ -225,11 +213,11 @@ class PolicyDecisionPointTest {
         assertNotNull(policyDecision);
         assertFalse(policyDecision.isAllowed());
         assertEquals("Purpose is not allowed", policyDecision.getMessage());
-	}
-	
-	
-	@Test
-	public void evaluateSpatial_success() {
+    }
+
+
+    @Test
+    public void evaluateSpatial_success() {
         Constraint constraint = Constraint.Builder.newInstance()
                 .leftOperand(LeftOperand.SPATIAL)
                 .operator(Operator.EQ)
@@ -239,7 +227,7 @@ class PolicyDecisionPointTest {
         Permission permission = Permission.Builder.newInstance()
                 .action(Action.USE)
                 .target(NegotiationMockObjectUtil.TARGET)
-                .constraint(Arrays.asList(constraint))
+                .constraint(Collections.singletonList(constraint))
                 .build();
 
         Agreement agreement = Agreement.Builder.newInstance()
@@ -248,7 +236,7 @@ class PolicyDecisionPointTest {
                 .assigner(NegotiationMockObjectUtil.ASSIGNER)
                 .target(NegotiationMockObjectUtil.TARGET)
                 .timestamp(ZonedDateTime.now().minusDays(2).format(DateTimeFormatter.ISO_OFFSET_DATE_TIME))
-                .permission(Arrays.asList(permission)).build();
+                .permission(Collections.singletonList(permission)).build();
 
         PolicyRequest request = PolicyRequest.Builder.newInstance()
                 .agreementId(agreement.getId())
@@ -261,11 +249,11 @@ class PolicyDecisionPointTest {
 
         assertNotNull(policyDecision);
         assertTrue(policyDecision.isAllowed());
-	}
-	
+    }
+
     @Test
     public void evaluateSpatial_deny() {
-    	Constraint constraint = Constraint.Builder.newInstance()
+        Constraint constraint = Constraint.Builder.newInstance()
                 .leftOperand(LeftOperand.SPATIAL)
                 .operator(Operator.EQ)
                 .rightOperand("denied_location")
@@ -274,7 +262,7 @@ class PolicyDecisionPointTest {
         Permission permission = Permission.Builder.newInstance()
                 .action(Action.USE)
                 .target(NegotiationMockObjectUtil.TARGET)
-                .constraint(Arrays.asList(constraint))
+                .constraint(Collections.singletonList(constraint))
                 .build();
 
         Agreement agreement = Agreement.Builder.newInstance()
@@ -283,7 +271,7 @@ class PolicyDecisionPointTest {
                 .assigner(NegotiationMockObjectUtil.ASSIGNER)
                 .target(NegotiationMockObjectUtil.TARGET)
                 .timestamp(ZonedDateTime.now().minusDays(2).format(DateTimeFormatter.ISO_OFFSET_DATE_TIME))
-                .permission(Arrays.asList(permission)).build();
+                .permission(Collections.singletonList(permission)).build();
 
         PolicyRequest request = PolicyRequest.Builder.newInstance()
                 .agreementId(agreement.getId())
@@ -293,7 +281,7 @@ class PolicyDecisionPointTest {
                 .build();
 
         PolicyDecision policyDecision = policyDecisionPoint.evaluate(request, agreement);
-        
+
         assertNotNull(policyDecision);
         assertFalse(policyDecision.isAllowed());
         assertEquals("Location is in the allowed", policyDecision.getMessage());
